structure complete -- fine-tuning

--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
                     nav__link--anchor link__hover-effect
                     link__hover-effect--black">Contact</a>
                 </li>
-                <li class="nav__link">
+                <li class="nav__link click">
                     <a href="#" class="
-                    nav__link--anchor link__hover-effect
-                    link__hover-effect--black fa-adjust"><i class="fa-solid fa-circle-half-stroke"></i></a>
+                    nav__link--anchor 
+                    link__hover-effect
+                    link__hover-effect--black 
+                    fa-adjust"><i class="fa-solid fa-circle-half-stroke"></i></a>
                 </li>
             </ul>
         </nav>
@@ -42,23 +44,150 @@
                 <h1 class="title">Hello</h1>
                 <h1 class="title title--secondary">I'm Naomi</h1>
                 <p class="header__para">
-                    I'm a <span class="text-color">frontend software engineer</span> dedicated to creating webpages with clean, engaging, user-friendly design.
+                    I'm a <span class="text-color">frontend software engineer</span> dedicated to crafting webpages with clean, engaging, user-friendly design.
                     <br>
                     Find out more <span class="text-color">about me.</span>
                 </p>
                 <div class="social__list">
-                    <a href="" class="social__link click">
+                    <a href="https://github.com/naomi-oleary" target="_blank" class="social__link click">
                         <i class="fa-solid fa-code-branch"></i>
                     </a>
-                    <a href="" class="social__link click">
+                    <a href="#" class="social__link click">
                         <i class="fa-regular fa-envelope"></i>
                     </a>
-                    <a href="" class="social__link click">
+                    <a href="https://www.linkedin.com/in/naomi-oleary02/" target="_blank" class="social__link click">
                         <i class="fa-brands fa-linkedin-in"></i>
+                    </a>
+                    <a href="./assets/Pianist Resume.pdf" target="_blank" class="social__link click">
+                        <i class="fa-regular fa-file"></i>
                     </a>
                 </div>
             </div>
         </header>
+        <button class="mail__btn click">
+            <i class="fa-regular fa-paper-plane"></i>
+        </button>
+        <a href="#projects" class="scroll">
+            <div class="scroll__icon click"></div>
+        </a>
     </section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h1 class="section__title">
+                    Check out some of my <span class="text-color">projects</span>
+                </h1>
+                <ul class="project__list">
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/Sauna-Business-Placeholder.svg" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Sauna Building Business
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis necessitatibus deserunt sapiente nam ipsam odio porro quisquam, qui aspernatur reiciendis nisi similique culpa a exercitationem? Vero aliquid molestias distinctio omnis?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                    <a href="https://github.com/naomi-oleary" class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/undraw_artist-at-work_yos7.svg" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    Artist Page - Blacksmith
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis necessitatibus deserunt sapiente nam ipsam odio porro quisquam, qui aspernatur reiciendis nisi similique culpa a exercitationem? Vero aliquid molestias distinctio omnis?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                    <a href="https://github.com/naomi-oleary" class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__wrapper">
+                            <img src="./assets/undraw_happy-customer_4h84.svg" class="project__img" alt="">
+                            <div class="project__wrapper--bg"></div>
+                            <div class="project__description">
+                                <h3 class="project__description--title">
+                                    E-Commerce Site
+                                </h3>
+                                <h4 class="project__description--sub-title">
+                                    HTML, CSS, JavaScript
+                                </h4>
+                                <p class="project__description--para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis necessitatibus deserunt sapiente nam ipsam odio porro quisquam, qui aspernatur reiciendis nisi similique culpa a exercitationem? Vero aliquid molestias distinctio omnis?
+                                </p>
+                                <div class="project__description--links">
+                                    <a href="#" class="project__description--link">
+                                        <i class="fa-solid fa-link"></i>
+                                    </a>
+                                    <a href="https://github.com/naomi-oleary" class="project__description--link">
+                                        <i class="fa-brands fa-github"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="row footer__row">
+                <figure>
+                    <img class="footer__logo--img" src="./assets/transparent-logo.svg" alt="">
+                </figure>
+                <div class="footer__social--links">
+                    <a href="https://github.com/naomi-oleary" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--yellow
+                    ">Github</a>
+                    <a href="https://www.linkedin.com/in/naomi-oleary02/" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--yellow
+                    ">LinkedIn</a>
+                    <a href="#" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--yellow
+                    ">Contact</a>
+                    <a href="./assets/Pianist Resume.pdf" target="_blank" class="
+                    footer__social--link
+                    link__hover-effect
+                    link__hover-effect--yellow
+                    ">Resume</a>
+                </div>
+                <div class="footer__copyright">Copyright &copy; Naomi O'Leary 2026</div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
