--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/3c6e5905fc.js" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function () {
+            emailjs.init({publicKey: "gb1WGF_NbvIc6wReE"});
+    })();
+</script>
 </head>
 <body>
     <section id="landing-page">
@@ -70,6 +78,61 @@
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
+        <div class="modal">
+            <div class="modal__half modal__about">
+                <h3 class="modal__title modal__title--about">About me</h3>
+                <h4 class="modal__sub-title modal__sub-title--about">Frontend Software Engineer</h4>
+                <p class="modal__para modal__para--about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, obcaecati repellat vero quibusdam perspiciatis odio soluta. Debitis ducimus dolorem similique magnam consectetur vel in alias distinctio asperiores harum sint possimus, quam iusto laudantium facere nulla quaerat doloremque natus ex beatae itaque? Iusto et nostrum fuga expedita ut illum accusantium soluta molestiae, dolore modi similique deleniti animi minus laborum veritatis aperiam.</p>
+                <div class="modal__languages">
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">HTML</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">CSS</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">JavaScript</span>
+                    </figure>
+                    <figure class="modal__language">
+                        <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+                        <span class="language__name">React</span>
+                    </figure>
+                </div>
+            </div>
+            <div class="modal__half modal__contact">
+                <h3 class="modal__title modal__title--contact">
+                    Reach out!
+                </h3>
+                <h4 class="modal__sub--title modal__sub-title--contact">
+                    Open for hire
+                </h4>
+                <form id="contact__form" onsubmit="contact(event)">
+                    <div class="form__item">
+                        <label class="form__item--label">Name</label>
+                        <input class="input" name="user_name" type="text" required></input>
+                    </div>
+                    <div class="form__item">
+                        <label class="form__item--label">Email</label>
+                        <input class="input" name="user_email" type="email" required></input>
+                    </div>
+                    <div class="form__item">
+                        <label class="form__item--label">Message</label>
+                        <textarea class="input" name="message" type="text" required></textarea>
+                    </div>
+                    <button id="contact__submit" class="form__submit">Send it my way</button>
+                </form>
+                <div class="modal__overlay modal__overlay--loading">
+                    <i class="fa-solid fa-compact-disc"></i>
+                </div>
+                <div class="modal__overlay modal__overlay--success">
+                    Glad we connected -- talk to you soon!
+                </div>
+            </div>
+            <i class="fas fa-times modal__close click"></i>
+        </div>
     </section>
     <section id="projects">
         <div class="container">
