--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
 </script>
 </head>
 <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
         <nav>
             <figure>
                 <img id="personal-logo" src="./assets/transparent-logo.svg" alt="">
             </figure>
             <ul class="nav__link--list">
-                <li class="nav__link">
+                <li class="nav__link" onclick="toggleModal()">
                     <a href="#" class="
                     nav__link--anchor link__hover-effect
                     link__hover-effect--black">About</a>
                 </li>
                 <li class="nav__link">
-                    <a href="#" class="
+                    <a href="#projects" class="
                     nav__link--anchor link__hover-effect
                     link__hover-effect--black">Projects</a>
                 </li>
                 <li class="nav__link">
                     <a href="#" class="
                     nav__link--anchor link__hover-effect
-                    link__hover-effect--black">Contact</a>
+                    link__hover-effect--black" onclick="toggleModal()">Contact</a>
                 </li>
-                <li class="nav__link click">
+                <li class="nav__link click" onclick="toggleContrast()">
                     <a href="#" class="
                     nav__link--anchor 
                     link__hover-effect
@@ -54,7 +54,7 @@
                 <p class="header__para">
                     I'm a <span class="text-color">frontend software engineer</span> dedicated to crafting webpages with clean, engaging, user-friendly design.
                     <br>
-                    Find out more <span class="text-color">about me.</span>
+                    Find out more <span class="text-color click" onclick="toggleModal()">about me.</span>
                 </p>
                 <div class="social__list">
                     <a href="https://github.com/naomi-oleary" target="_blank" class="social__link click">
@@ -72,9 +72,11 @@
                 </div>
             </div>
         </header>
-        <button class="mail__btn click">
-            <i class="fa-regular fa-paper-plane"></i>
-        </button>
+        <a href="#">
+            <button class="mail__btn click" onclick="toggleModal()">
+                <i class="fa-regular fa-paper-plane"></i>
+            </button>
+        </a>
         <a href="#projects" class="scroll">
             <div class="scroll__icon click"></div>
         </a>
@@ -103,6 +105,7 @@
                 </div>
             </div>
             <div class="modal__half modal__contact">
+                <i class="fas fa-times modal__close click" onclick="toggleModal()"></i>
                 <h3 class="modal__title modal__title--contact">
                     Reach out!
                 </h3>
@@ -131,8 +134,16 @@
                     Glad we connected -- talk to you soon!
                 </div>
             </div>
-            <i class="fas fa-times modal__close click"></i>
         </div>
+        <img src="./assets/semi circle.svg" class="shape shape--0">
+        <img src="./assets/circle.svg" class="shape shape--1">
+        <img src="./assets/squiggly.svg" class="shape shape--2">
+        <img src="./assets/circle.svg" class="shape shape--3">
+        <img src="./assets/triangle.svg" class="shape shape--4">
+        <img src="./assets/circle.svg" class="shape shape--5">
+        <img src="./assets/squiggly.svg" class="shape shape--6">
+        <img src="./assets/circle.svg" class="shape shape--7">
+        <img src="./assets/semi circle.svg" class="shape shape--8">
     </section>
     <section id="projects">
         <div class="container">
@@ -241,7 +252,7 @@
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--yellow
-                    ">Contact</a>
+                    " onclick="toggleModal()">Contact</a>
                     <a href="./assets/Pianist Resume.pdf" target="_blank" class="
                     footer__social--link
                     link__hover-effect
