forgot to target=_blanket git push

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                     <img class="footer__logo--img" src="./assets/transparent-logo.svg" alt="">
                 </figure>
                 <div class="footer__social--links">
-                    <a href="https://github.com/naomi-oleary" class="
+                    <a href="https://github.com/naomi-oleary" target="_blank" class="
                     footer__social--link
                     link__hover-effect
                     link__hover-effect--yellow
